...
      <ActionButton
        loading={rejectLoader}
        disabled={approveLoader || rejectLoader}
        style={styles.button}
        onPress={onReject}
        variant="secondary"
        testID="reject-button"
      >
        {rejectLabel}
      </ActionButton>
      <ActionButton
        loading={approveLoader}
        disabled={disabled || approveLoader || rejectLoader}
        style={styles.button}
        onPress={onApprove}
        testID="approve-button"
      >
        {approveLabel}
      </ActionButton>
    </View>
  );
}
...
