...
        Connect your wallet to start using Web3Inbox today
      </Text>
      <TouchableOpacity
        style={[styles.button, {backgroundColor: Theme['accent-100']}]}
        onPress={() => open()}>
        <Text style={[styles.buttonText, {color: Theme['inverse-100']}]}>
          Connect Wallet
        </Text>
      </TouchableOpacity>
      <View style={styles.footer}>
        <Text style={[styles.footerText, {color: Theme['fg-200']}]}>
          Learn more at
        </Text>
...
