...
        onPress={onPress}>
        <Text
          style={{
            color: Theme['inverse-000'],
            fontSize: 18,
          }}>
          Sign Message
        </Text>
      </Pressable>
    </View>
  );
}

...
