...
          </Text>
          <BarcodeSvg width={24} height={24} fill={Theme['text-primary']} />
        </Button>

        <Button
          onPress={onPastePress}
          testID="button-paste-url"
          style={[
            styles.optionButton,
            { backgroundColor: Theme['foreground-primary'] },
          ]}
        >
          <Text variant="lg-400" color="text-primary">
...
