...
      </View>

      <View style={styles.buttonContainer}>
        <ActionButton
          onPress={onPay}
          fullWidth
          testID="pay-button-pay"
          accessibilityLabel={`Pay ${currencySymbol}${totalPayAmount}`}
        >
          {`Pay ${currencySymbol}${totalPayAmount}`}{' '}
          {canIncludeGasInTotal && (
            <Text variant="sm-400" color="text-invert">
              (includes network fee)
...
