...
        <View
          style={headerLeftContent ? styles.headerLeftFlex : styles.headerLeft}
        >
          {showBackButton ? (
            <Button
              onPress={onBack}
              testID="pay-button-back"
              hitSlop={{ top: 10, bottom: 10, left: 10, right: 10 }}
            >
              <SvgArrowLeft
                width={38}
                height={38}
                fill={Theme['text-primary']}
...

        {/* Spacer */}
        <View style={styles.headerCenter} />

        {/* Close Button */}
        <View style={styles.headerRight}>
          <ModalCloseButton onPress={onClose} testID="pay-button-close" />
        </View>
      </View>

      {/* Animated Content */}
      <Animated.View
        key={step}
...
