...
  };

  return (
    <View style={[styles.container, { backgroundColor: Theme['bg-primary'] }]}>
      <View style={styles.headerText}>
        <Text variant="h6-400" color="text-primary" center>
          Add your personal details
        </Text>
        <Text variant="lg-400" color="text-secondary" center>
          To meet compliance requirements, some basic information is collected
          from WalletConnect Pay users.
          {!readMoreExpanded && (
            <Text
...
