...
      session: session as SessionTypes.Struct,
    });
  };

  return (
    <Button
      testID="session-item"
      style={[
        styles.container,
        { backgroundColor: Theme['foreground-primary'] },
      ]}
      onPress={onPress}
    >
...
