...

  return (
    <View style={[styles.container, { backgroundColor: Theme['bg-primary'] }]}>
      {/* Header Row */}
      <View style={styles.header}>
        <Button
          testID="session-disconnect-button"
          style={[
            styles.disconnectButton,
            { backgroundColor: Theme['bg-invert'] },
          ]}
          onPress={onDisconnect}
          disabled={loading}
...
