appId: com.walletconnect.web3modal.rnsample.internal
name: AppKit Web to React Native Wallet Connection Rejected
---
- clearState
- openLink:
    link: https://lab.reown.com/library/wagmi/
    browser: true
- startRecording: "Web to Native Connection Rejected"
- extendedWaitUntil:
    notVisible: "Initializing..."
    timeout: 10000
- tapOn: "Connect Wallet"
- scroll
- scroll
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: "React Native Sample Wallet"
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: "React Native Sample Wallet React Native Sample Wallet"
- extendedWaitUntil:
    visible: 
        id: "reject-button"
    timeout: 10000
- tapOn:
    id: "reject-button"
- runFlow:
    when:
      platform: iOS
    commands:
      - back
- assertVisible: "Connect Wallet"
- stopRecording