appId: com.walletconnect.web3modal.rnsample.internal
name: AppKit Web to React Native Wallet Sign Request Rejected
---
- openLink:
    link: https://lab.reown.com/library/wagmi/
    browser: true
- startRecording: "Web to Native Sign Request Rejected"
- extendedWaitUntil:
    notVisible: "Initializing..."
    timeout: 10000
- scroll
- scroll
- tapOn: "Sign Message"
- extendedWaitUntil:
    visible: 
        id: "reject-button"
    timeout: 10000
- tapOn:
    id: "reject-button"
- runFlow:
    when:
      platform: iOS
    commands:
      - back
- waitForAnimationToEnd
- assertVisible: "Signing Failed"
- stopRecording